[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/TemplateLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lightmaps/torchmap.png" type="Texture" id=2]
[ext_resource path="res://Doors/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Doors/LockedDoor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Computer/Computer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Loot/Briefcase.tscn" type="PackedScene" id=6]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=7]
[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://SFX/nightvision_off.wav" type="AudioStream" id=9]
[ext_resource path="res://Interface/TutorialGUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Interface/MessageTemplate.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Tutorial" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="TutorialGUI" parent="." index="0" instance=ExtResource( 10 )]

[node name="TileMap" parent="Navigation2D" index="0"]
tile_data = PoolIntArray( -655356, 1, 0, -655355, 1, 2, -655354, 1, 2, -655353, 1, 2, -655352, 1, 2, -655351, 1, 2, -655350, 1, 2, -655349, 1, 2, -655348, 1, 2, -655347, 1, 2, -655346, 1, 2, -655345, 1, 2, -655344, 1, 2, -655343, 1, 262148, -655342, 1, 262149, -655341, 1, 2, -655340, 1, 2, -655339, 1, 2, -655338, 1, 2, -655337, 1, 2, -655336, 1, 2, -655335, 1, 1, -589820, 1, 65538, -589819, 4, 0, -589818, 4, 0, -589817, 4, 0, -589816, 4, 0, -589815, 4, 0, -589814, 4, 0, -589813, 4, 0, -589812, 4, 0, -589811, 4, 0, -589810, 4, 0, -589809, 4, 0, -589808, 4, 0, -589807, 1, 131076, -589806, 1, 131077, -589805, 4, 0, -589804, 4, 0, -589803, 4, 0, -589802, 4, 0, -589801, 4, 0, -589800, 4, 0, -589799, 1, 65538, -524284, 1, 65538, -524283, 4, 0, -524282, 4, 0, -524281, 4, 0, -524280, 4, 0, -524279, 4, 0, -524278, 4, 0, -524277, 4, 0, -524276, 4, 0, -524275, 4, 0, -524274, 4, 0, -524273, 4, 0, -524272, 4, 0, -524271, 1, 131076, -524270, 1, 131077, -524269, 4, 0, -524268, 4, 0, -524267, 4, 0, -524266, 4, 0, -524265, 4, 0, -524264, 4, 0, -524263, 1, 65538, -458748, 1, 65538, -458747, 4, 0, -458746, 4, 0, -458745, 1, 0, -458744, 1, 2, -458743, 1, 2, -458742, 1, 2, -458741, 1, 2, -458740, 1, 2, -458739, 1, 2, -458738, 1, 1, -458737, 4, 0, -458736, 4, 0, -458735, 1, 131076, -458734, 1, 131077, -458733, 4, 0, -458732, 4, 0, -458731, 1, 7, -458730, 1, 8, -458729, 4, 0, -458728, 4, 0, -458727, 1, 65538, -327691, 1, 0, -327690, 1, 2, -327689, 1, 2, -327688, 1, 2, -327687, 1, 2, -327686, 1, 2, -327685, 1, 2, -327684, 1, 2, -327683, 1, 2, -327682, 1, 2, -327681, 1, 2, -393216, 1, 1, -393212, 1, 65538, -393211, 4, 0, -393210, 4, 0, -393209, 1, 65538, -393208, 4, 0, -393207, 4, 0, -393206, 4, 0, -393205, 4, 0, -393204, 4, 0, -393203, 4, 0, -393202, 1, 65538, -393201, 4, 0, -393200, 4, 0, -393199, 1, 131076, -393198, 1, 131077, -393197, 4, 0, -393196, 4, 0, -393195, 1, 131076, -393194, 1, 131077, -393193, 4, 0, -393192, 4, 0, -393191, 1, 65538, -262155, 1, 65538, -262154, 4, 0, -262153, 4, 0, -262152, 4, 0, -262151, 4, 0, -262150, 4, 0, -262149, 4, 0, -262148, 4, 0, -262147, 4, 0, -262146, 4, 0, -262145, 4, 0, -327680, 1, 65536, -327679, 1, 1, -327676, 1, 65538, -327675, 4, 0, -327674, 4, 0, -327673, 1, 65538, -327672, 4, 0, -327671, 4, 0, -327670, 4, 2, -327669, 4, 2, -327668, 4, 2, -327667, 4, 0, -327666, 1, 65538, -327665, 4, 0, -327664, 4, 0, -327663, 1, 131076, -327662, 1, 131077, -327661, 4, 0, -327660, 4, 0, -327659, 1, 131076, -327658, 1, 131077, -327657, 4, 0, -327656, 4, 0, -327655, 1, 65538, -196620, 1, 0, -196619, 1, 65537, -196618, 4, 0, -196617, 4, 0, -196616, 4, 0, -196615, 4, 2, -196614, 4, 2, -196613, 4, 4, -196612, 4, 4, -196611, 4, 2, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 1, 65538, -262140, 1, 65538, -262139, 4, 0, -262138, 1, 65542, -262137, 1, 65540, -262136, 4, 0, -262135, 4, 0, -262134, 4, 2, -262133, 4, 0, -262132, 4, 2, -262131, 4, 0, -262130, 1, 65538, -262129, 4, 0, -262128, 4, 0, -262127, 1, 131076, -262126, 1, 131077, -262125, 4, 0, -262124, 4, 0, -262123, 1, 131076, -262122, 1, 131077, -262121, 4, 0, -262120, 4, 0, -262119, 1, 65538, -131084, 1, 65538, -131083, 4, 0, -131082, 4, 0, -131081, 4, 2, -131080, 4, 4, -131079, 4, 2, -131078, 4, 4, -131077, 4, 2, -131076, 4, 2, -131075, 4, 4, -131074, 4, 0, -131073, 4, 4, -196608, 4, 0, -196607, 1, 65536, -196606, 1, 2, -196605, 1, 2, -196604, 1, 65537, -196603, 4, 0, -196602, 4, 0, -196601, 1, 65538, -196600, 4, 0, -196599, 4, 2, -196598, 4, 0, -196597, 4, 4, -196596, 4, 2, -196595, 4, 0, -196594, 1, 65538, -196593, 4, 0, -196592, 4, 0, -196591, 1, 65543, -196590, 1, 65544, -196589, 4, 0, -196588, 4, 0, -196587, 1, 131076, -196586, 1, 131077, -196585, 4, 0, -196584, 4, 0, -196583, 1, 65536, -196582, 1, 2, -196581, 1, 2, -196580, 1, 2, -196579, 1, 1, -65548, 1, 65538, -65547, 4, 0, -65546, 4, 0, -65545, 4, 2, -65544, 4, 4, -65543, 4, 4, -65542, 4, 2, -65541, 4, 0, -65540, 4, 4, -65539, 4, 0, -65538, 4, 4, -65537, 4, 2, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 1, 65538, -131064, 4, 0, -131063, 4, 4, -131062, 4, 2, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 1, 65538, -131057, 4, 0, -131056, 4, 0, -131055, 4, 0, -131054, 4, 0, -131053, 4, 0, -131052, 4, 0, -131051, 1, 131076, -131050, 1, 131077, -131049, 4, 0, -131048, 4, 0, -131047, 4, 0, -131046, 4, 0, -131045, 4, 0, -131044, 4, 0, -131043, 1, 65538, -12, 1, 65538, -11, 4, 0, -10, 4, 0, -9, 4, 2, -8, 4, 2, -7, 4, 4, -6, 4, 0, -5, 4, 4, -4, 4, 0, -3, 4, 2, -2, 4, 0, -1, 4, 2, -65536, 4, 0, -65535, 1, 0, -65534, 1, 2, -65533, 1, 2, -65532, 1, 2, -65531, 1, 2, -65530, 1, 2, -65529, 1, 65540, -65528, 4, 0, -65527, 4, 4, -65526, 4, 4, -65525, 4, 4, -65524, 4, 4, -65523, 4, 0, -65522, 1, 65538, -65521, 4, 0, -65520, 4, 0, -65519, 4, 0, -65518, 4, 0, -65517, 4, 0, -65516, 4, 0, -65515, 1, 131076, -65514, 1, 131077, -65513, 4, 0, -65512, 4, 0, -65511, 4, 0, -65510, 4, 0, -65509, 4, 0, -65508, 4, 0, -65507, 1, 65538, 65524, 1, 65538, 65525, 4, 0, 65526, 4, 2, 65527, 4, 4, 65528, 4, 2, 65529, 4, 4, 65530, 4, 4, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 4, 65535, 4, 2, 0, 4, 0, 1, 1, 65538, 7, 1, 65538, 8, 4, 0, 9, 4, 2, 10, 4, 4, 11, 4, 4, 12, 4, 4, 13, 4, 0, 14, 1, 65539, 15, 1, 2, 16, 1, 2, 17, 1, 2, 18, 1, 2, 19, 1, 2, 20, 1, 2, 21, 1, 327684, 22, 1, 327685, 23, 1, 2, 24, 1, 2, 25, 1, 2, 26, 1, 1, 27, 4, 0, 28, 4, 0, 29, 1, 65538, 131060, 1, 65538, 131061, 4, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 1, 65538, 65543, 1, 65538, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 1, 65538, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 0, 65561, 4, 0, 65562, 1, 65538, 65563, 4, 0, 65564, 4, 0, 65565, 1, 65538, 196596, 1, 65536, 196597, 1, 2, 196598, 1, 2, 196599, 1, 2, 196600, 1, 2, 196601, 1, 2, 196602, 1, 2, 196603, 1, 2, 196604, 1, 2, 196605, 1, 2, 196606, 1, 2, 196607, 1, 2, 131072, 1, 2, 131073, 1, 65537, 131079, 1, 65536, 131080, 1, 2, 131081, 1, 1, 131082, 4, 0, 131083, 1, 0, 131084, 1, 2, 131085, 1, 2, 131086, 1, 65537, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 2, 131091, 4, 4, 131092, 4, 0, 131093, 4, 0, 131094, 4, 4, 131095, 4, 2, 131096, 4, 4, 131097, 4, 0, 131098, 1, 6, 131099, 4, 0, 131100, 4, 0, 131101, 1, 65538, 196617, 1, 65538, 196618, 4, 0, 196619, 1, 65538, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 2, 196625, 4, 2, 196626, 4, 0, 196627, 4, 0, 196628, 4, 4, 196629, 4, 2, 196630, 4, 4, 196631, 4, 4, 196632, 4, 4, 196633, 4, 0, 196634, 4, 0, 196635, 4, 0, 196636, 4, 0, 196637, 1, 65538, 262153, 1, 65538, 262154, 4, 0, 262155, 1, 6, 262156, 4, 0, 262157, 4, 4, 262158, 4, 0, 262159, 4, 2, 262160, 4, 0, 262161, 4, 2, 262162, 4, 4, 262163, 4, 2, 262164, 4, 4, 262165, 4, 2, 262166, 4, 2, 262167, 4, 4, 262168, 4, 4, 262169, 4, 2, 262170, 4, 2, 262171, 4, 4, 262172, 4, 0, 262173, 1, 65538, 327689, 1, 65538, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 2, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 2, 327701, 4, 4, 327702, 4, 2, 327703, 4, 4, 327704, 4, 4, 327705, 4, 4, 327706, 4, 0, 327707, 4, 0, 327708, 4, 0, 327709, 1, 65538, 393225, 1, 65538, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 4, 0, 393240, 4, 0, 393241, 4, 0, 393242, 4, 0, 393243, 4, 0, 393244, 4, 0, 393245, 1, 65538, 458761, 1, 65536, 458762, 1, 2, 458763, 1, 2, 458764, 1, 2, 458765, 1, 2, 458766, 1, 2, 458767, 1, 2, 458768, 1, 2, 458769, 1, 2, 458770, 1, 2, 458771, 1, 2, 458772, 1, 2, 458773, 1, 2, 458774, 1, 2, 458775, 1, 2, 458776, 1, 2, 458777, 1, 2, 458778, 1, 2, 458779, 1, 2, 458780, 1, 2, 458781, 1, 65537 )

[node name="Furniture" parent="Navigation2D" index="2"]
tile_data = PoolIntArray( 196620, 1, 0, 196621, 2, 0, 196622, 3, 0, 262158, 4, 0 )

[node name="Player" parent="." index="2"]
position = Vector2( -255.297, -115.477 )

[node name="Briefcase" parent="Loot" index="0" instance=ExtResource( 6 )]
position = Vector2( 994.803, 101.743 )
z_index = 5

[node name="Door" parent="Doors" index="0" instance=ExtResource( 3 )]
position = Vector2( 351.63, -232.095 )

[node name="LockedDoor" parent="LockedDoors" index="0" instance=ExtResource( 4 )]
position = Vector2( 673.091, 295.716 )
lock_group = "1"

[node name="Computer" parent="Computers" index="0" instance=ExtResource( 5 )]
position = Vector2( 817.382, 225.949 )
rotation = 1.5708
lock_group = "1"

[node name="Exit" parent="." index="11"]
margin_left = 595.342
margin_top = -347.128
margin_right = 795.342
margin_bottom = -247.128

[node name="Light2D" type="Light2D" parent="." index="12"]
position = Vector2( -571.219, 17.2568 )
rotation = -0.237713
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.75

[node name="Light2D4" type="Light2D" parent="." index="13"]
position = Vector2( 425.33, -69.953 )
rotation = -2.05605
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.75
shadow_item_cull_mask = 0

[node name="Light2D2" type="Light2D" parent="." index="14"]
position = Vector2( -556.163, -277.342 )
rotation = 0.385738
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.75

[node name="Light2D3" type="Light2D" parent="." index="15"]
position = Vector2( 2145.4, 357.367 )
rotation = -3.55765
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
energy = 0.75

[node name="ObjectiveAreas" type="Node" parent="." index="16"]

[node name="MoveObjective" type="Area2D" parent="ObjectiveAreas" index="0"]
position = Vector2( 130.03, -94.0567 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/MoveObjective" index="0"]
shape = SubResource( 1 )

[node name="DoorObjective" type="Area2D" parent="ObjectiveAreas" index="1"]
position = Vector2( 372.881, -305.942 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/DoorObjective" index="0"]
shape = SubResource( 1 )

[node name="NightVisionObjective" type="Area2D" parent="ObjectiveAreas" index="2"]
position = Vector2( 1791.34, 167.82 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/NightVisionObjective" index="0"]
shape = SubResource( 1 )

[node name="LootObjective" type="Area2D" parent="ObjectiveAreas" index="3"]
position = Vector2( 978.79, 85.7822 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/LootObjective" index="0"]
shape = SubResource( 1 )

[node name="ComputerObjective" type="Area2D" parent="ObjectiveAreas" index="4"]
position = Vector2( 833.911, 216.959 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ComputerObjective" index="0"]
shape = SubResource( 1 )

[node name="LockedDoorObjective" type="Area2D" parent="ObjectiveAreas" index="5"]
position = Vector2( 672.694, 223.917 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/LockedDoorObjective" index="0"]
shape = SubResource( 1 )

[node name="ObjectivePositions" type="Node" parent="." index="17"]

[node name="MoveObjective" type="Position2D" parent="ObjectivePositions" index="0"]
position = Vector2( 186.506, -92.1896 )

[node name="DoorObjective" type="Position2D" parent="ObjectivePositions" index="1"]
position = Vector2( 351.929, -245.571 )

[node name="NightVisionObjective" type="Position2D" parent="ObjectivePositions" index="2"]
position = Vector2( 1793.74, 114.017 )

[node name="LootObjective" type="Position2D" parent="ObjectivePositions" index="3"]
position = Vector2( 993.839, 101.752 )

[node name="ComputerObjective" type="Position2D" parent="ObjectivePositions" index="4"]
position = Vector2( 817.726, 269.408 )

[node name="LockedDoorObjective" type="Position2D" parent="ObjectivePositions" index="5"]
position = Vector2( 676.875, 314.48 )

[node name="ExitObjective" type="Position2D" parent="ObjectivePositions" index="6"]
position = Vector2( 691.734, -299.237 )

[node name="ObjectiveMessages" type="Node" parent="." index="18"]

[node name="WelcomeMessage" parent="ObjectiveMessages" index="0" instance=ExtResource( 11 )]
message = "Welcome, Heist Meister, to your first day of training.
Please proceed to the objective marker using the [W] [A] [S] [D] keys to move."

[node name="DoorMessage" parent="ObjectiveMessages" index="1" instance=ExtResource( 11 )]
message = "Excellent. 
Now we'll practice interacting with objects. Stand close to the door and left-click on it with the mouse."

[node name="NightVisionMessage" parent="ObjectiveMessages" index="2" instance=ExtResource( 11 )]
message = "You'll be working in the dark a lot, so we've provided you with a T.O.U.C.A.N night vision module. 
Activate or deactivate it with the [SPACE] key."

[node name="LootMessage" parent="ObjectiveMessages" index="3" instance=ExtResource( 11 )]
message = "Before you can leave, you'll have to grab that suitcase."

[node name="ComputerMessage" parent="ObjectiveMessages" index="4" instance=ExtResource( 11 )]
message = "We will provide you the combinations for locked doors throughout the level. 
Match it with the locked door within the same numbered group."

[node name="LockedDoorMessage" parent="ObjectiveMessages" index="5" instance=ExtResource( 11 )]
message = "Input the code using the numpad to unlock the door.
You can check the group number through night vision."

[node name="ExitMessage" parent="ObjectiveMessages" index="6" instance=ExtResource( 11 )]
message = "GET TO THE CHOPPA!
Sorry, got carried away.
The exit is unlocked! 
Head to it!"

[node name="ObjectiveMarker" type="Sprite" parent="." index="19"]
position = Vector2( -219.439, -116.201 )
z_index = 3
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="ObjectiveMarker" index="0"]
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="." index="20"]

[node name="MessageSound" type="AudioStreamPlayer" parent="." index="21"]
stream = ExtResource( 9 )
volume_db = -10.0

[connection signal="combination" from="Computers/Computer" to="LockedDoors/LockedDoor" method="_on_Computer_combination"]
[connection signal="body_entered" from="ObjectiveAreas/MoveObjective" to="." method="_on_MoveObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/DoorObjective" to="." method="_on_DoorObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/NightVisionObjective" to="." method="_on_NightVisionObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/LootObjective" to="." method="_on_LootObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ComputerObjective" to="." method="_on_ComputerObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/LockedDoorObjective" to="." method="_on_LockedDoorObjective_body_entered"]
